--- a/public/index.html
+++ b/public/index.html
@@ -4,40 +4,49 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Frontend Mentor | Single-page design portfolio"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+  
+    <title>Frontend Mentor | Single-page design portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+
     <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+      Free Consultation
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  Design solutions made easy
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
+  With over ten years of experience in various design disciplines, I’m your one-stop shop for your design needs.
+
+  Graphic Design
+  UI/UX
+  Apps
+  Photography
+  Illustrations
+  Motion Graphics
+
+  I’m Amy, and I’d love to work on your next project
+
+  I love working with others to create beautiful design solutions. I’ve designed everything from brand illustrations 
+  to complete mobile apps. I’m also handy with a camera!
+
+  Free Consultation
+
+  My Work
+
+  Book a call with me
+
+  I’d love to have a chat to see how I can help you. The best first step is for us to discuss your project during a 
+  free consultation. Then we can move forward from there.
+
+  Free Consultation
+
+  Free Consultation
     -->
   </body>
 </html>
